# yar

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build_deps.sh  gdb.sh  imgui.ini  install_slang.sh  meson.build  meson.options  process_ibl.sh  profiler.sh  renderdoc.sh  run.sh  setup_debug.sh  setup_release.sh
assets/: meson.build
assets/ibl/: meson.build
assets/ibl/cloudy/: diffuse.ktx2  meson.build  specular.ktx2
assets/ibl/cobble/: color.hdr  diffuse.ktx2  specular.ktx2
assets/scenes/: DamagedHelmet.glb  FlightHelmet.glb  meson.build
assets/shaders/: brdf.slang  color.slang  common.slang  math.slang  meson.build  shaded.slang  sky.slang  texture.slang  unlit.slang
examples/: main.cpp
src/: Engine.cpp  Engine.h  Log.h  Memory.h  engine.cpp  engine.h  log.h  main.cpp  meson.build  time.h  util.h
src/Components/: Camera.h  Transform.h
src/Renderer/: Buffer.h  DataTypes.h  Renderer.h  Shader.h
src/Renderer/Empty/: EmptyRenderer.h
src/Renderer/Vulkan/: VmaUsage.cpp  VmaUsage.h  VulkanAttributes.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommon.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h
src/UI/: UI.cpp  UI.h
src/Window/: Window.cpp  Window.h
src/World/: Chunk.h  Icosphere.h  Sky.h  World.cpp  World.h
src/components/: camera.h  geometry.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  rect.h  rotation.h  scene.cpp  scene.h  texture.cpp  texture.h  transform.h
src/engine/: assets.cpp  assets.h  engine.cpp  engine.h  entry.cpp
src/platform/: fs.cpp  fs.h  memory.h
src/public/: camera.h  entry.h  geometry.h  iapp.h  iassets.h  ibuffer.h  iengine.h  iimage.h  imaterial.h  inode.h  input.h  irenderer.h  isky.h  itexture.h  iui.h  iwindow.h  iworld.h  log.h  transform.h  util.h
src/renderer/: attributes.h  buffer.cpp  buffer.h  common.h  data_types.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  image.cpp  image.h  instance.cpp  instance.h  material.h  mesh.h  pipeline.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h
src/renderer/empty/: empty_renderer.h
src/renderer/vulkan/: attributes.h  buffer.cpp  buffer.h  common.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.h  ubo_descriptor_set.cpp  ubo_descriptor_set.h  vma.cpp  vma_usage.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptor_set.cpp  vulkan_descriptor_set.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h
src/shader/: compiler.cpp  compiler.h
src/ui/: ui.cpp  ui.h
src/window/: input.h  window.cpp  window.h
src/world/: gltf_node.cpp  gltf_node.h  icosphere.h  mesh_node.h  sky.cpp  sky.h  world.cpp  world.h
